# vllm-tei-plugin

./: README.md  pyproject.toml
docker/: Dockerfile  Dockerfile.cuda  Dockerfile.dcu  Dockerfile.npu
examples/: serve_bge_large_zh.sh  serve_bge_reranker_large.sh  test_bge_large_zh.sh  test_bge_reranker_large.sh
src/vllm_tei_plugin/: protocol.py
src/vllm_tei_plugin/entrypoints/openai/: api_server.py  serving_tei_embed.py  serving_tei_rerank.py
