[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.hatch.build]
include = [
    "src/vllm_tei_plugin/**/*.py",
]
exclude = [
    "tests/",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vllm_tei_plugin"]

[tool.poetry]
packages = [
    { include = "vllm_tei_plugin", from = "src" }
]


[project]
name = "vllm-tei-plugin"
version = "0.9.2"
description = "vLLM tei plugin for enhanced monitoring and tracing"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "kai.liu", email = "onlookerliu_sjtu@163.com" }
]
license = { text = "Apache 2.0" }
keywords = ["vllm", "tei", "embedding", "rerank"]
classifiers = [
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research", 
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "vllm==0.9.2",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "hatchling>=1.18.0",
    "uv>=0.1.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
    "mypy>=1.5.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
    "tox>=4.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.0.0",
    "pymdown-extensions>=10.0.0",
]

lint = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

build = [
    "build>=1.0.0",
    "hatchling>=1.18.0",
    "uv>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/MonadKai/vllm-tei-plugin"
Repository = "https://github.com/MonadKai/vllm-tei-plugin"

# [project.entry-points."vllm.general_plugins"]
# vllm_tei_plugin = "vllm_tei_plugin:register"


[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["build", "dist", "env", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
ignore = [
    "PLR0913",
    "TC001",
    "COM812",
    "ISC001",
    "TC002",
    "PLW1514", # allow Path.open without encoding
    "RET505", # allow `else` blocks
    "RET506", # allow `else` blocks
    "PD011", # ignore .values usage since ruff assumes it's a Pandas DataFrame
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"